# manubrain

./: LICENSE  README.md  compose.yml  nodered_dockerfile
data/jupyter/detect_repo/: .flake8  .gitignore  README.md  setup.cfg  setup.py  tox.ini
data/jupyter/detect_repo/.github/workflows/: main.yml
data/jupyter/detect_repo/examples/: README.md
data/jupyter/detect_repo/examples/notebooks/: benchmarker_open_ds.ipynb  demonstrator.ipynb  postgres_mqtt_ft.ipynb  simple_pipeline.ipynb
data/jupyter/detect_repo/examples/scripts/: detect.py  detect_BASE_10147.py  detect_BASE_10297.py  detect_LOCAL_10297.py  detector.py  download_datasets.py  find_anomalies.sh  run_train.py  train.sh  use_hyperopt.py  use_sklearn.py
data/jupyter/detect_repo/examples/scripts/arma/: arma_example.html  arma_example.ipynb  arma_helper.py  data_loader.py  distribute_arima.py
data/jupyter/detect_repo/examples/trained/: Model_rnn_lorenz_56_epochs_100.args  Model_rnn_lorenz_56_epochs_1000.args  Model_rnn_lorenz_56_epochs_200.args  Model_rnn_lorenz_56_epochs_250.args
data/jupyter/detect_repo/legal/: LICENSE
data/jupyter/detect_repo/src/mb_detect/: cli.py  detect.py  train.sh
data/jupyter/detect_repo/src/mb_detect/anomaly_detection/: anomaly_detector_module.py  benchmarker.py  detect_helper.py  train.sh
data/jupyter/detect_repo/src/mb_detect/dataloader/: README.md  benchmarker.py  chaotic_pde.py  downloader.py  ds_loader.py  iter_reader.py  model_loader.py  (+2 more)
data/jupyter/detect_repo/tests/: test_benchmarker.py  test_classic.py  test_ds_reader.py  test_lorenz.py  test_train.py
(+107 files in other folders)
