[metadata]
name = mb_detect
version = 0.1.0
description = A collection of anomaly detection algorithms
long_description = file:README.md
keywords = anomaly, detection, networks
license = BSD 3-Clause License
url = https://github.com/manubrain/detect

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # TODO your requirements go here
    torch
    matplotlib
    seaborn
    scipy
    pillow
    tensorboard
    statsmodels
    sklearn
python_version == "3.7"

# this weird construction found at https://cthoyt.com/2020/06/03/how-to-code-with-me-organization.html
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[tool:pytest]
filterwarnings =
    ignore
    default:::mb_detect.*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
